Sync all content

--- a/content/resources/24500s05_12.md
+++ b/content/resources/24500s05_12.md
@@ -4,8 +4,13 @@ description: This resource contains information on Dretske, Evans, Bar-On on tra
   Bar-On against transparency, transparency-to-the-world, Dretske on zombies, sensations
   to the rescue, privileged and peculiar access revisited, and Evans on privileged
   access.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/24-500-topics-in-philosophy-of-mind-self-knowledge-spring-2005/6b783e50b56cf6015937c6c533d6a8e8_24500S05_12.pdf
+file: /media/courses/24-500-topics-in-philosophy-of-mind-self-knowledge-spring-2005/6b783e50b56cf6015937c6c533d6a8e8_24500S05_12.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: 24500S05_12.pdf
 uid: 6b783e50-b56c-f601-5937-c6c533d6a8e8
