--- a/content/resources/24500s05_10.md
+++ b/content/resources/24500s05_10.md
@@ -2,8 +2,13 @@
 content_type: resource
 description: This resource includes information on matters arising, Bar-On?s Speaking
   My Mind, simple expressivism, and avowals proper.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/24-500-topics-in-philosophy-of-mind-self-knowledge-spring-2005/bd116c8a6d837101680c11339d11d37f_24500S05_10.pdf
+file: /media/courses/24-500-topics-in-philosophy-of-mind-self-knowledge-spring-2005/bd116c8a6d837101680c11339d11d37f_24500S05_10.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: 24500S05_10.pdf
 uid: bd116c8a-6d83-7101-680c-11339d11d37f
