--- a/content/resources/24500s05_11.md
+++ b/content/resources/24500s05_11.md
@@ -2,8 +2,13 @@
 content_type: resource
 description: This resource includes Bar-On?s speaking my mind, Dretske, Evans, Bar-On
   on transparency, and transparency-to-the-world.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/24-500-topics-in-philosophy-of-mind-self-knowledge-spring-2005/0827f4dde1595023d4de789480f39bf2_24500S05_11.pdf
+file: /media/courses/24-500-topics-in-philosophy-of-mind-self-knowledge-spring-2005/0827f4dde1595023d4de789480f39bf2_24500S05_11.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: 24500S05_11.pdf
 uid: 0827f4dd-e159-5023-d4de-789480f39bf2
