--- a/content/resources/24500s05_3.md
+++ b/content/resources/24500s05_3.md
@@ -3,8 +3,13 @@ content_type: resource
 description: This resource contains information on McKinsey?s recipe, a Boghossian-style
   argument, cf. Putnam?s proof, Boghossian?s first version, expanded version, the
   expanded version spelt out, and against Boghossian?s dry earth argument.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/24-500-topics-in-philosophy-of-mind-self-knowledge-spring-2005/337ecea88d230fee9c33d7284f2973c1_24500S05_3.pdf
+file: /media/courses/24-500-topics-in-philosophy-of-mind-self-knowledge-spring-2005/337ecea88d230fee9c33d7284f2973c1_24500S05_3.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: 24500S05_3.pdf
 uid: 337ecea8-8d23-0fee-9c33-d7284f2973c1
