--- a/content/resources/24500s05_4.md
+++ b/content/resources/24500s05_4.md
@@ -3,8 +3,13 @@ content_type: resource
 description: 'This resource contains information on warrant transmission, Boghossian?s
   "content and self-knowledge", content and self-knowledge, against inner observation,
   evidence: two options, slow switching, and on knowing one?s own mind.'
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/24-500-topics-in-philosophy-of-mind-self-knowledge-spring-2005/b26e68c716da1f0f04480e3805e36776_24500S05_4.pdf
+file: /media/courses/24-500-topics-in-philosophy-of-mind-self-knowledge-spring-2005/b26e68c716da1f0f04480e3805e36776_24500S05_4.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: 24500S05_4.pdf
 uid: b26e68c7-16da-1f0f-0448-0e3805e36776
