--- a/content/resources/24500s05_7.md
+++ b/content/resources/24500s05_7.md
@@ -4,8 +4,13 @@ description: This resource contains information on self-blindness, one more time
   & Co., immunity to error through misidentification, conscious attitudes, attention,
   and selfknowledge, failure of pseudo-transitivity,an eye directed outward and Peacocke?s
   (necessary) possession conditions for the concept of belief.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/24-500-topics-in-philosophy-of-mind-self-knowledge-spring-2005/55b39381b13d46cc925b20bed112b5e8_24500S05_7.pdf
+file: /media/courses/24-500-topics-in-philosophy-of-mind-self-knowledge-spring-2005/55b39381b13d46cc925b20bed112b5e8_24500S05_7.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: 24500S05_7.pdf
 uid: 55b39381-b13d-46cc-925b-20bed112b5e8
