--- a/content/resources/24500s05_9.md
+++ b/content/resources/24500s05_9.md
@@ -2,8 +2,13 @@
 content_type: resource
 description: This resource contains information on speaking my mind again, avowals
   again, simple expressivism, and avowals proper.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/24-500-topics-in-philosophy-of-mind-self-knowledge-spring-2005/af1a26eb6c5b5d305edbefdcfc7f68be_24500S05_9.pdf
+file: /media/courses/24-500-topics-in-philosophy-of-mind-self-knowledge-spring-2005/af1a26eb6c5b5d305edbefdcfc7f68be_24500S05_9.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: 24500S05_9.pdf
 uid: af1a26eb-6c5b-5d30-5edb-efdcfc7f68be
