Sync all content

--- a/content/resources/24500s05_1.md
+++ b/content/resources/24500s05_1.md
@@ -11,6 +11,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: 68e438e3-eb2d-cbce-ced4-3d19516ee229
 resourcetype: Document
 title: 24500S05_1.pdf
 uid: 1f3ad8c8-3652-e452-6443-ae8fe0f71d49
