--- a/content/resources/24500s05_12.md
+++ b/content/resources/24500s05_12.md
@@ -11,6 +11,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: 68e438e3-eb2d-cbce-ced4-3d19516ee229
 resourcetype: Document
 title: 24500S05_12.pdf
 uid: 6b783e50-b56c-f601-5937-c6c533d6a8e8
