--- a/content/resources/24500s05_6.md
+++ b/content/resources/24500s05_6.md
@@ -9,6 +9,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: 68e438e3-eb2d-cbce-ced4-3d19516ee229
 resourcetype: Document
 title: 24500S05_6.pdf
 uid: a12bdfaa-a81d-0ba8-9a0e-8480d5ce236d
