--- a/content/resources/24500s05_10.md
+++ b/content/resources/24500s05_10.md
@@ -9,6 +9,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: 68e438e3-eb2d-cbce-ced4-3d19516ee229
 resourcetype: Document
 title: 24500S05_10.pdf
 uid: bd116c8a-6d83-7101-680c-11339d11d37f
