--- a/content/resources/24500s05_11.md
+++ b/content/resources/24500s05_11.md
@@ -9,6 +9,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: 68e438e3-eb2d-cbce-ced4-3d19516ee229
 resourcetype: Document
 title: 24500S05_11.pdf
 uid: 0827f4dd-e159-5023-d4de-789480f39bf2
