--- a/content/resources/24500s05_13.md
+++ b/content/resources/24500s05_13.md
@@ -10,6 +10,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: 68e438e3-eb2d-cbce-ced4-3d19516ee229
 resourcetype: Document
 title: 24500S05_13.pdf
 uid: f09735f7-825e-f87e-24ec-cdd8f7e8f635
