--- a/content/resources/24500s05_2.md
+++ b/content/resources/24500s05_2.md
@@ -12,6 +12,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: 68e438e3-eb2d-cbce-ced4-3d19516ee229
 resourcetype: Document
 title: 24500S05_2.pdf
 uid: 324cb646-0867-dec2-698b-89b1bdea5bf0
