--- a/content/resources/24500s05_3.md
+++ b/content/resources/24500s05_3.md
@@ -10,6 +10,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: 68e438e3-eb2d-cbce-ced4-3d19516ee229
 resourcetype: Document
 title: 24500S05_3.pdf
 uid: 337ecea8-8d23-0fee-9c33-d7284f2973c1
