--- a/content/resources/24500s05_4.md
+++ b/content/resources/24500s05_4.md
@@ -10,6 +10,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: 68e438e3-eb2d-cbce-ced4-3d19516ee229
 resourcetype: Document
 title: 24500S05_4.pdf
 uid: b26e68c7-16da-1f0f-0448-0e3805e36776
