--- a/content/resources/24500s05_5.md
+++ b/content/resources/24500s05_5.md
@@ -10,6 +10,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: 68e438e3-eb2d-cbce-ced4-3d19516ee229
 resourcetype: Document
 title: 24500S05_5.pdf
 uid: b5c18b7a-a59b-1ad5-bf94-7849cfa76d3b
