--- a/content/resources/24500s05_7.md
+++ b/content/resources/24500s05_7.md
@@ -11,6 +11,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: 68e438e3-eb2d-cbce-ced4-3d19516ee229
 resourcetype: Document
 title: 24500S05_7.pdf
 uid: 55b39381-b13d-46cc-925b-20bed112b5e8
