--- a/content/resources/24500s05_8.md
+++ b/content/resources/24500s05_8.md
@@ -10,6 +10,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: 68e438e3-eb2d-cbce-ced4-3d19516ee229
 resourcetype: Document
 title: 24500S05_8.pdf
 uid: bea07a58-68c1-f54b-e179-c7013888c379
