--- a/content/resources/24500s05_9.md
+++ b/content/resources/24500s05_9.md
@@ -9,6 +9,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: 68e438e3-eb2d-cbce-ced4-3d19516ee229
 resourcetype: Document
 title: 24500S05_9.pdf
 uid: af1a26eb-6c5b-5d30-5edb-efdcfc7f68be
