--- a/content/resources/24-500s05.md
+++ b/content/resources/24-500s05.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: Le paysan(Peasant)by Paul Cezanne.(Image courtesy of the WebMuseum Web
   site.)
-file: /media/courses/24-500-topics-in-philosophy-of-mind-self-knowledge-spring-2005/68db203cad763707ed2a3e57484793d5_24-500s05.jpg
+file: /courses/24-500-topics-in-philosophy-of-mind-self-knowledge-spring-2005/68db203cad763707ed2a3e57484793d5_24-500s05.jpg
 file_type: image/jpeg
 image_metadata:
   caption: "Le paysan (Peasant) by Paul Cezanne. (Image courtesy of the\_[WebMuseum](https://www.ibiblio.org/wm/)\_\
@@ -15,3 +15,5 @@ resourcetype: Image
 title: 24-500s05.jpg
 uid: 68db203c-ad76-3707-ed2a-3e57484793d5
 ---
+Le paysan(Peasant)by Paul Cezanne.(Image courtesy of the WebMuseum Web site.)
+
