--- a/content/resources/24500s05_10.md
+++ b/content/resources/24500s05_10.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: This resource includes information on matters arising, Bar-On?s Speaking
   My Mind, simple expressivism, and avowals proper.
-file: /media/courses/24-500-topics-in-philosophy-of-mind-self-knowledge-spring-2005/bd116c8a6d837101680c11339d11d37f_24500S05_10.pdf
+file: /courses/24-500-topics-in-philosophy-of-mind-self-knowledge-spring-2005/bd116c8a6d837101680c11339d11d37f_24500S05_10.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
@@ -14,3 +14,5 @@ resourcetype: Document
 title: 24500S05_10.pdf
 uid: bd116c8a-6d83-7101-680c-11339d11d37f
 ---
+This resource includes information on matters arising, Bar-On?s Speaking My Mind, simple expressivism, and avowals proper.
+
