--- a/content/resources/24500s05_13.md
+++ b/content/resources/24500s05_13.md
@@ -3,7 +3,7 @@ content_type: resource
 description: This resource contains information on the puzzle of transparency, sensations
   to the rescue, privileged and peculiar access revisited, and Evans on privileged
   access.
-file: /media/courses/24-500-topics-in-philosophy-of-mind-self-knowledge-spring-2005/f09735f7825ef87e24eccdd8f7e8f635_24500S05_13.pdf
+file: /courses/24-500-topics-in-philosophy-of-mind-self-knowledge-spring-2005/f09735f7825ef87e24eccdd8f7e8f635_24500S05_13.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
@@ -15,3 +15,5 @@ resourcetype: Document
 title: 24500S05_13.pdf
 uid: f09735f7-825e-f87e-24ec-cdd8f7e8f635
 ---
+This resource contains information on the puzzle of transparency, sensations to the rescue, privileged and peculiar access revisited, and Evans on privileged access.
+
