--- a/content/resources/24500s05_2.md
+++ b/content/resources/24500s05_2.md
@@ -5,7 +5,7 @@ description: This resource contains information on externalism and self-knowledg
   McKinsey and Brueckner, the incompatibilist should emphasize privileged access,
   McKinsey?s recipe, the concept water, the argument sans "concept", metalinguistic
   argument, and dry earth.
-file: /media/courses/24-500-topics-in-philosophy-of-mind-self-knowledge-spring-2005/324cb6460867dec2698b89b1bdea5bf0_24500S05_2.pdf
+file: /courses/24-500-topics-in-philosophy-of-mind-self-knowledge-spring-2005/324cb6460867dec2698b89b1bdea5bf0_24500S05_2.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
@@ -17,3 +17,5 @@ resourcetype: Document
 title: 24500S05_2.pdf
 uid: 324cb646-0867-dec2-698b-89b1bdea5bf0
 ---
+This resource contains information on externalism and self-knowledge, Putnam?s twin earth, Burge?s thought experiment, two incompatibilist arguments, McKinsey and Brueckner, the incompatibilist should emphasize privileged access, McKinsey?s recipe, the concept water, the argument sans "concept", metalinguistic argument, and dry earth.
+
