--- a/content/resources/24500s05_8.md
+++ b/content/resources/24500s05_8.md
@@ -3,7 +3,7 @@ content_type: resource
 description: This resource contains information on immunity to error through misidentification,
   Wittgenstein on ?I?, self-reference and self-awareness, and Bar-On?s Speaking My
   Mind.
-file: /media/courses/24-500-topics-in-philosophy-of-mind-self-knowledge-spring-2005/bea07a5868c1f54be179c7013888c379_24500S05_8.pdf
+file: /courses/24-500-topics-in-philosophy-of-mind-self-knowledge-spring-2005/bea07a5868c1f54be179c7013888c379_24500S05_8.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
@@ -15,3 +15,5 @@ resourcetype: Document
 title: 24500S05_8.pdf
 uid: bea07a58-68c1-f54b-e179-c7013888c379
 ---
+This resource contains information on immunity to error through misidentification, Wittgenstein on ?I?, self-reference and self-awareness, and Bar-On?s Speaking My Mind.
+
