Sync all content

--- a/content/resources/24-500s05.md
+++ b/content/resources/24-500s05.md
@@ -10,10 +10,10 @@ image_metadata:
   credit: ''
   image-alt: A photograph of 'Le paysan, Peasant',  by Paul Cezanne.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 24-500s05.jpg
 uid: 68db203c-ad76-3707-ed2a-3e57484793d5
 ---
 Le paysan(Peasant)by Paul Cezanne.(Image courtesy of the WebMuseum Web site.)
-
