--- a/content/resources/24500s05_4.md
+++ b/content/resources/24500s05_4.md
@@ -7,6 +7,7 @@ file: /courses/24-500-topics-in-philosophy-of-mind-self-knowledge-spring-2005/b2
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -16,4 +17,3 @@ title: 24500S05_4.pdf
 uid: b26e68c7-16da-1f0f-0448-0e3805e36776
 ---
 This resource contains information on warrant transmission, Boghossian?s "content and self-knowledge", content and self-knowledge, against inner observation, evidence: two options, slow switching, and on knowing one?s own mind.
-
