--- a/content/resources/24500s05_8.md
+++ b/content/resources/24500s05_8.md
@@ -7,6 +7,7 @@ file: /courses/24-500-topics-in-philosophy-of-mind-self-knowledge-spring-2005/be
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -16,4 +17,3 @@ title: 24500S05_8.pdf
 uid: bea07a58-68c1-f54b-e179-c7013888c379
 ---
 This resource contains information on immunity to error through misidentification, Wittgenstein on ?I?, self-reference and self-awareness, and Bar-On?s Speaking My Mind.
-
