--- a/content/resources/24-500s05-th.md
+++ b/content/resources/24-500s05-th.md
@@ -9,10 +9,10 @@ image_metadata:
   credit: ''
   image-alt: A photograph of 'Le paysan, Peasant',  by Paul Cezanne.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 24-500s05-th.jpg
 uid: 6041cf36-3ec6-4649-a473-8cd0c5f6684c
 ---
 New image Upload
-
