--- a/content/resources/24500s05_1.md
+++ b/content/resources/24500s05_1.md
@@ -8,6 +8,7 @@ file: /courses/24-500-topics-in-philosophy-of-mind-self-knowledge-spring-2005/1f
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -17,4 +18,3 @@ title: 24500S05_1.pdf
 uid: 1f3ad8c8-3652-e452-6443-ae8fe0f71d49
 ---
 This resource includes information on self-knowledge: privileged and peculiar access,the puzzle of transparency, Dretskeon zombies, externalism and self-knowledge, Putnam?s twin earth, McKinsey and Brueckner, Brueckner?sfinal suggestion, and enter Boghossian.
-
