--- a/content/resources/24500s05_10.md
+++ b/content/resources/24500s05_10.md
@@ -6,6 +6,7 @@ file: /courses/24-500-topics-in-philosophy-of-mind-self-knowledge-spring-2005/bd
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -15,4 +16,3 @@ title: 24500S05_10.pdf
 uid: bd116c8a-6d83-7101-680c-11339d11d37f
 ---
 This resource includes information on matters arising, Bar-On?s Speaking My Mind, simple expressivism, and avowals proper.
-
