--- a/content/resources/24500s05_11.md
+++ b/content/resources/24500s05_11.md
@@ -6,6 +6,7 @@ file: /courses/24-500-topics-in-philosophy-of-mind-self-knowledge-spring-2005/08
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -15,4 +16,3 @@ title: 24500S05_11.pdf
 uid: 0827f4dd-e159-5023-d4de-789480f39bf2
 ---
 This resource includes Bar-On?s speaking my mind, Dretske, Evans, Bar-On on transparency, and transparency-to-the-world.
-
