--- a/content/resources/24500s05_13.md
+++ b/content/resources/24500s05_13.md
@@ -7,6 +7,7 @@ file: /courses/24-500-topics-in-philosophy-of-mind-self-knowledge-spring-2005/f0
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -16,4 +17,3 @@ title: 24500S05_13.pdf
 uid: f09735f7-825e-f87e-24ec-cdd8f7e8f635
 ---
 This resource contains information on the puzzle of transparency, sensations to the rescue, privileged and peculiar access revisited, and Evans on privileged access.
-
