--- a/content/resources/24500s05_2.md
+++ b/content/resources/24500s05_2.md
@@ -9,6 +9,7 @@ file: /courses/24-500-topics-in-philosophy-of-mind-self-knowledge-spring-2005/32
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -18,4 +19,3 @@ title: 24500S05_2.pdf
 uid: 324cb646-0867-dec2-698b-89b1bdea5bf0
 ---
 This resource contains information on externalism and self-knowledge, Putnam?s twin earth, Burge?s thought experiment, two incompatibilist arguments, McKinsey and Brueckner, the incompatibilist should emphasize privileged access, McKinsey?s recipe, the concept water, the argument sans "concept", metalinguistic argument, and dry earth.
-
