--- a/content/resources/24500s05_3.md
+++ b/content/resources/24500s05_3.md
@@ -7,6 +7,7 @@ file: /courses/24-500-topics-in-philosophy-of-mind-self-knowledge-spring-2005/33
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -16,4 +17,3 @@ title: 24500S05_3.pdf
 uid: 337ecea8-8d23-0fee-9c33-d7284f2973c1
 ---
 This resource contains information on McKinsey?s recipe, a Boghossian-style argument, cf. Putnam?s proof, Boghossian?s first version, expanded version, the expanded version spelt out, and against Boghossian?s dry earth argument.
-
