--- a/content/resources/24500s05_5.md
+++ b/content/resources/24500s05_5.md
@@ -7,6 +7,7 @@ file: /courses/24-500-topics-in-philosophy-of-mind-self-knowledge-spring-2005/b5
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -16,4 +17,3 @@ title: 24500S05_5.pdf
 uid: b5c18b7a-a59b-1ad5-bf94-7849cfa76d3b
 ---
 This resource contains information on slow-switching, Shoemaker, warrant transmission, Warfield?s version of Boghossian?s argument, the consequence problem, transmission failure, and a general problem.
-
