--- a/content/resources/24500s05_6.md
+++ b/content/resources/24500s05_6.md
@@ -6,6 +6,7 @@ file: /courses/24-500-topics-in-philosophy-of-mind-self-knowledge-spring-2005/a1
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -15,4 +16,3 @@ title: 24500S05_6.pdf
 uid: a12bdfaa-a81d-0ba8-9a0e-8480d5ce236d
 ---
 This course includes information on Shoemaker, matters arising,transmission again,Peacocke & Co., failure of pseudo-transitivity, and our entitlement to self-knowledge.
-
