--- a/content/resources/24500s05_7.md
+++ b/content/resources/24500s05_7.md
@@ -8,6 +8,7 @@ file: /courses/24-500-topics-in-philosophy-of-mind-self-knowledge-spring-2005/55
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -17,4 +18,3 @@ title: 24500S05_7.pdf
 uid: 55b39381-b13d-46cc-925b-20bed112b5e8
 ---
 This resource contains information on self-blindness, one more time Peacocke & Co., immunity to error through misidentification, conscious attitudes, attention, and selfknowledge, failure of pseudo-transitivity,an eye directed outward and Peacocke?s (necessary) possession conditions for the concept of belief.
-
