--- a/content/resources/24500s05_9.md
+++ b/content/resources/24500s05_9.md
@@ -6,6 +6,7 @@ file: /courses/24-500-topics-in-philosophy-of-mind-self-knowledge-spring-2005/af
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -15,4 +16,3 @@ title: 24500S05_9.pdf
 uid: af1a26eb-6c5b-5d30-5edb-efdcfc7f68be
 ---
 This resource contains information on speaking my mind again, avowals again, simple expressivism, and avowals proper.
-
