Sync all content

--- a/content/resources/24-500s05.md
+++ b/content/resources/24-500s05.md
@@ -2,7 +2,8 @@
 content_type: resource
 description: Le paysan(Peasant)by Paul Cezanne.(Image courtesy of the WebMuseum Web
   site.)
-file: /courses/24-500-topics-in-philosophy-of-mind-self-knowledge-spring-2005/68db203cad763707ed2a3e57484793d5_24-500s05.jpg
+file: /ol-ocw-studio-app/courses/24-500-topics-in-philosophy-of-mind-self-knowledge-spring-2005/68db203cad763707ed2a3e57484793d5_24-500s05.jpg
+file_size: 56076
 file_type: image/jpeg
 image_metadata:
   caption: "Le paysan (Peasant) by Paul Cezanne. (Image courtesy of the\_[WebMuseum](https://www.ibiblio.org/wm/)\_\
