--- a/content/resources/24500s05_1.md
+++ b/content/resources/24500s05_1.md
@@ -4,7 +4,8 @@ description: 'This resource includes information on self-knowledge: privileged a
   peculiar access,the puzzle of transparency, Dretskeon zombies, externalism and self-knowledge,
   Putnam?s twin earth, McKinsey and Brueckner, Brueckner?sfinal suggestion, and enter
   Boghossian.'
-file: /courses/24-500-topics-in-philosophy-of-mind-self-knowledge-spring-2005/1f3ad8c83652e4526443ae8fe0f71d49_24500S05_1.pdf
+file: /ol-ocw-studio-app/courses/24-500-topics-in-philosophy-of-mind-self-knowledge-spring-2005/1f3ad8c83652e4526443ae8fe0f71d49_24500S05_1.pdf
+file_size: 116494
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
