--- a/content/resources/24500s05_8.md
+++ b/content/resources/24500s05_8.md
@@ -3,7 +3,8 @@ content_type: resource
 description: This resource contains information on immunity to error through misidentification,
   Wittgenstein on ?I?, self-reference and self-awareness, and Bar-On?s Speaking My
   Mind.
-file: /courses/24-500-topics-in-philosophy-of-mind-self-knowledge-spring-2005/bea07a5868c1f54be179c7013888c379_24500S05_8.pdf
+file: /ol-ocw-studio-app/courses/24-500-topics-in-philosophy-of-mind-self-knowledge-spring-2005/bea07a5868c1f54be179c7013888c379_24500S05_8.pdf
+file_size: 137179
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
