--- a/content/resources/24-500s05-th.md
+++ b/content/resources/24-500s05-th.md
@@ -1,7 +1,8 @@
 ---
 content_type: resource
 description: New image Upload
-file: /courses/24-500-topics-in-philosophy-of-mind-self-knowledge-spring-2005/6041cf363ec64649a4738cd0c5f6684c_24-500s05-th.jpg
+file: /ol-ocw-studio-app/courses/24-500-topics-in-philosophy-of-mind-self-knowledge-spring-2005/6041cf363ec64649a4738cd0c5f6684c_24-500s05-th.jpg
+file_size: 10929
 file_type: image/jpeg
 image_metadata:
   caption: "Le paysan (Peasant) by Paul Cezanne. (Image courtesy of the\_[WebMuseum](https://www.ibiblio.org/wm/)\_\
