--- a/content/resources/24500s05_10.md
+++ b/content/resources/24500s05_10.md
@@ -2,7 +2,8 @@
 content_type: resource
 description: This resource includes information on matters arising, Bar-On?s Speaking
   My Mind, simple expressivism, and avowals proper.
-file: /courses/24-500-topics-in-philosophy-of-mind-self-knowledge-spring-2005/bd116c8a6d837101680c11339d11d37f_24500S05_10.pdf
+file: /ol-ocw-studio-app/courses/24-500-topics-in-philosophy-of-mind-self-knowledge-spring-2005/bd116c8a6d837101680c11339d11d37f_24500S05_10.pdf
+file_size: 94618
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
