--- a/content/resources/24500s05_11.md
+++ b/content/resources/24500s05_11.md
@@ -2,7 +2,8 @@
 content_type: resource
 description: This resource includes Bar-On?s speaking my mind, Dretske, Evans, Bar-On
   on transparency, and transparency-to-the-world.
-file: /courses/24-500-topics-in-philosophy-of-mind-self-knowledge-spring-2005/0827f4dde1595023d4de789480f39bf2_24500S05_11.pdf
+file: /ol-ocw-studio-app/courses/24-500-topics-in-philosophy-of-mind-self-knowledge-spring-2005/0827f4dde1595023d4de789480f39bf2_24500S05_11.pdf
+file_size: 103168
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
