--- a/content/resources/24500s05_12.md
+++ b/content/resources/24500s05_12.md
@@ -4,7 +4,8 @@ description: This resource contains information on Dretske, Evans, Bar-On on tra
   Bar-On against transparency, transparency-to-the-world, Dretske on zombies, sensations
   to the rescue, privileged and peculiar access revisited, and Evans on privileged
   access.
-file: /courses/24-500-topics-in-philosophy-of-mind-self-knowledge-spring-2005/6b783e50b56cf6015937c6c533d6a8e8_24500S05_12.pdf
+file: /ol-ocw-studio-app/courses/24-500-topics-in-philosophy-of-mind-self-knowledge-spring-2005/6b783e50b56cf6015937c6c533d6a8e8_24500S05_12.pdf
+file_size: 109321
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
