--- a/content/resources/24500s05_13.md
+++ b/content/resources/24500s05_13.md
@@ -3,7 +3,8 @@ content_type: resource
 description: This resource contains information on the puzzle of transparency, sensations
   to the rescue, privileged and peculiar access revisited, and Evans on privileged
   access.
-file: /courses/24-500-topics-in-philosophy-of-mind-self-knowledge-spring-2005/f09735f7825ef87e24eccdd8f7e8f635_24500S05_13.pdf
+file: /ol-ocw-studio-app/courses/24-500-topics-in-philosophy-of-mind-self-knowledge-spring-2005/f09735f7825ef87e24eccdd8f7e8f635_24500S05_13.pdf
+file_size: 100477
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
