--- a/content/resources/24500s05_3.md
+++ b/content/resources/24500s05_3.md
@@ -3,7 +3,8 @@ content_type: resource
 description: This resource contains information on McKinsey?s recipe, a Boghossian-style
   argument, cf. Putnam?s proof, Boghossian?s first version, expanded version, the
   expanded version spelt out, and against Boghossian?s dry earth argument.
-file: /courses/24-500-topics-in-philosophy-of-mind-self-knowledge-spring-2005/337ecea88d230fee9c33d7284f2973c1_24500S05_3.pdf
+file: /ol-ocw-studio-app/courses/24-500-topics-in-philosophy-of-mind-self-knowledge-spring-2005/337ecea88d230fee9c33d7284f2973c1_24500S05_3.pdf
+file_size: 82372
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
