--- a/content/resources/24500s05_4.md
+++ b/content/resources/24500s05_4.md
@@ -3,7 +3,8 @@ content_type: resource
 description: 'This resource contains information on warrant transmission, Boghossian?s
   "content and self-knowledge", content and self-knowledge, against inner observation,
   evidence: two options, slow switching, and on knowing one?s own mind.'
-file: /courses/24-500-topics-in-philosophy-of-mind-self-knowledge-spring-2005/b26e68c716da1f0f04480e3805e36776_24500S05_4.pdf
+file: /ol-ocw-studio-app/courses/24-500-topics-in-philosophy-of-mind-self-knowledge-spring-2005/b26e68c716da1f0f04480e3805e36776_24500S05_4.pdf
+file_size: 114341
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
