--- a/content/resources/24500s05_5.md
+++ b/content/resources/24500s05_5.md
@@ -3,7 +3,8 @@ content_type: resource
 description: This resource contains information on slow-switching, Shoemaker, warrant
   transmission, Warfield?s version of Boghossian?s argument, the consequence problem,
   transmission failure, and a general problem.
-file: /courses/24-500-topics-in-philosophy-of-mind-self-knowledge-spring-2005/b5c18b7aa59b1ad5bf947849cfa76d3b_24500S05_5.pdf
+file: /ol-ocw-studio-app/courses/24-500-topics-in-philosophy-of-mind-self-knowledge-spring-2005/b5c18b7aa59b1ad5bf947849cfa76d3b_24500S05_5.pdf
+file_size: 105018
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
