--- a/content/resources/24500s05_6.md
+++ b/content/resources/24500s05_6.md
@@ -2,7 +2,8 @@
 content_type: resource
 description: This course includes information on Shoemaker, matters arising,transmission
   again,Peacocke & Co., failure of pseudo-transitivity, and our entitlement to self-knowledge.
-file: /courses/24-500-topics-in-philosophy-of-mind-self-knowledge-spring-2005/a12bdfaaa81d0ba89a0e8480d5ce236d_24500S05_6.pdf
+file: /ol-ocw-studio-app/courses/24-500-topics-in-philosophy-of-mind-self-knowledge-spring-2005/a12bdfaaa81d0ba89a0e8480d5ce236d_24500S05_6.pdf
+file_size: 118904
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
