--- a/content/resources/24500s05_7.md
+++ b/content/resources/24500s05_7.md
@@ -4,7 +4,8 @@ description: This resource contains information on self-blindness, one more time
   & Co., immunity to error through misidentification, conscious attitudes, attention,
   and selfknowledge, failure of pseudo-transitivity,an eye directed outward and Peacocke?s
   (necessary) possession conditions for the concept of belief.
-file: /courses/24-500-topics-in-philosophy-of-mind-self-knowledge-spring-2005/55b39381b13d46cc925b20bed112b5e8_24500S05_7.pdf
+file: /ol-ocw-studio-app/courses/24-500-topics-in-philosophy-of-mind-self-knowledge-spring-2005/55b39381b13d46cc925b20bed112b5e8_24500S05_7.pdf
+file_size: 96740
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
