--- a/content/resources/24500s05_9.md
+++ b/content/resources/24500s05_9.md
@@ -2,7 +2,8 @@
 content_type: resource
 description: This resource contains information on speaking my mind again, avowals
   again, simple expressivism, and avowals proper.
-file: /courses/24-500-topics-in-philosophy-of-mind-self-knowledge-spring-2005/af1a26eb6c5b5d305edbefdcfc7f68be_24500S05_9.pdf
+file: /ol-ocw-studio-app/courses/24-500-topics-in-philosophy-of-mind-self-knowledge-spring-2005/af1a26eb6c5b5d305edbefdcfc7f68be_24500S05_9.pdf
+file_size: 93962
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
