Sync all content

--- a/content/resources/24-500s05-th.md
+++ b/content/resources/24-500s05-th.md
@@ -5,8 +5,8 @@ file: /ol-ocw-studio-app/courses/24-500-topics-in-philosophy-of-mind-self-knowle
 file_size: 10929
 file_type: image/jpeg
 image_metadata:
-  caption: "Le paysan (Peasant) by Paul Cezanne. (Image courtesy of the\_{{% resource_link\
-    \ \"33499e47-0691-4d0b-afb0-81a4b4c62711\" \"WebMuseum\" %}}\_Web site.)"
+  caption: "Le paysan (Peasant) by Paul Cezanne. (Image courtesy of the\_[WebMuseum](https://www.ibiblio.org/wm/)\_\
+    Web site.)"
   credit: ''
   image-alt: A photograph of 'Le paysan, Peasant',  by Paul Cezanne.
 learning_resource_types: []
